Uploud my file on website
Uploud my file on website

--- a/index.html
+++ b/index.html
@@ -1,126 +1,24 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Lity Rate - Music Hub</title>
+  <meta charset="UTF-8">
+  <title>Lity Rate Music Hub</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<h1>🎵 Welcome to Lity Rate Music Hub</h1>
-<p>Discover songs by Lity Rate. Play or download your favorites.</p>
-
-<h2>Love Songs</h2>
-
-<div class="track">
-  <strong>I Want Love</strong>
-  <audio controls src="https://drive.google.com/uc?export=download&id=1-IKh3IJU6b54s_7XDyH3LOwlMn-Z4BIE"></audio>
-  <a href="https://drive.google.com/uc?export=download&id=1-IKh3IJU6b54s_7XDyH3LOwlMn-Z4BIE" download="Lity Rate - I Want Love.mp3">⬇️ Download</a>
-</div>
-
-<div class="track">
-  <strong>Me2</strong>
-  <audio controls src="https://drive.google.com/uc?export=download&id=1-Jn3NVI4Gdoo_-CqUxORW5RouoBh31Zk"></audio>
-  <a href="https://drive.google.com/uc?export=download&id=1-Jn3NVI4Gdoo_-CqUxORW5RouoBh31Zk" download="Lity Rate - Me2.mp3">⬇️ Download</a>
-</div>
-
-<div class="track">
-  <strong>Friend Zone</strong>
-  <audio controls src="https://drive.google.com/uc?export=download&id=1-Ooj-hQJJ4uxC-Krgxm0l3nLodK8MGN3"></audio>
-  <a href="https://drive.google.com/uc?export=download&id=1-Ooj-hQJJ4uxC-Krgxm0l3nLodK8MGN3" download="Lity Rate - Friend Zone.mp3">⬇️ Download</a>
-</div>
-
-<div class="track">
-  <strong>Stay With Me</strong>
-  <audio controls src="https://drive.google.com/uc?export=download&id=1-RsMecmYA-okxy-_8JFIrSln5cUppT4e"></audio>
-  <a href="https://drive.google.com/uc?export=download&id=1-RsMecmYA-okxy-_8JFIrSln5cUppT4e" download="Lity Rate - Stay With Me.mp3">⬇️ Download</a>
-</div>
-
-<h2>Trap Songs</h2>
-
-<div class="track">
-  <strong>Uhlalakuphi</strong>
-  <audio controls src="https://drive.google.com/uc?export=download&id=1-ryxqbY176b7zw_7XQ9K2pj4qjwFdc0Z"></audio>
-  <a href="https://drive.google.com/uc?export=download&id=1-ryxqbY176b7zw_7XQ9K2pj4qjwFdc0Z" download="Lity Rate - Uhlalakuphi.mp3">⬇️ Download</a>
-</div>
-
-<div class="track">
-  <strong>All Of A Sudden</strong>
-  <audio controls src="https://drive.google.com/uc?export=download&id=10wAuYsfwhwjaMn6qxVxc1-41UE9JdZct"></audio>
-  <a href="https://drive.google.com/uc?export=download&id=10wAuYsfwhwjaMn6qxVxc1-41UE9JdZct" download="Lity Rate - All Of A Sudden.mp3">⬇️ Download</a>
-</div>
-
-<div class="track">
-  <strong>I'm Getting Paid</strong>
-  <audio controls src="https://drive.google.com/uc?export=download&id=10vcr8XEOTTo9lhhwQH1AmQCgmco2l0cy"></audio>
-  <a href="https://drive.google.com/uc?export=download&id=10vcr8XEOTTo9lhhwQH1AmQCgmco2l0cy" download="Lity Rate - I'm Getting Paid.mp3">⬇️ Download</a>
-</div>
-
-<div class="track">
-  <strong>Blessings On Blessings</strong>
-  <audio controls src="https://drive.google.com/uc?export=download&id=10mErfOBvCS6G0J4u6cpupwt2n7fxR9uh"></audio>
-  <a href="https://drive.google.com/uc?export=download&id=10mErfOBvCS6G0J4u6cpupwt2n7fxR9uh" download="Lity Rate - Blessings On Blessings.mp3">⬇️ Download</a>
-</div>
-
-<div class="track">
-  <strong>Good Fucking</strong>
-  <audio controls src="https://drive.google.com/uc?export=download&id=10jrb1gXAUG9JFwVarMJyDGmiKIBSAPs8"></audio>
-  <a href="https://drive.google.com/uc?export=download&id=10jrb1gXAUG9JFwVarMJyDGmiKIBSAPs8" download="Lity Rate - Good Fucking.mp3">⬇️ Download</a>
-</div>
-
-<div class="track">
-  <strong>How You Like Me Now</strong>
-  <audio controls src="https://drive.google.com/uc?export=download&id=10eIi0zkucmWi7QWgzX8ARDYu5lCthDer"></audio>
-  <a href="https://drive.google.com/uc?export=download&id=10eIi0zkucmWi7QWgzX8ARDYu5lCthDer" download="Lity Rate - How You Like Me Now.mp3">⬇️ Download</a>
-</div>
-
-<div class="track">
-  <strong>Keep You Dog Close</strong>
-  <audio controls src="https://drive.google.com/uc?export=download&id=10OrnwQfWU02c_PNN1fZL6-5LBowc9hex"></audio>
-  <a href="https://drive.google.com/uc?export=download&id=10OrnwQfWU02c_PNN1fZL6-5LBowc9hex" download="Lity Rate - Keep You Dog Close.mp3">⬇️ Download</a>
-</div>
-
-<div class="track">
-  <strong>Freedom</strong>
-  <audio controls src="https://drive.google.com/uc?export=download&id=10N3cH339OBGFG7ex4OWT6e1K80gSnRhy"></audio>
-  <a href="https://drive.google.com/uc?export=download&id=10N3cH339OBGFG7ex4OWT6e1K80gSnRhy" download="Lity Rate - Freedom.mp3">⬇️ Download</a>
-</div>
-
-<div class="track">
-  <strong>Hakunamatata</strong>
-  <audio controls src="https://drive.google.com/uc?export=download&id=10Iv8jqZr1s7qXq_7EtXWpf_UudflOJJd"></audio>
-  <a href="https://drive.google.com/uc?export=download&id=10Iv8jqZr1s7qXq_7EtXWpf_UudflOJJd" download="Lity Rate - Hakunamatata.mp3">⬇️ Download</a>
-</div>
-
-<div class="track">
-  <strong>Mhlephuli</strong>
-  <audio controls src="https://drive.google.com/uc?export=download&id=10CoIqJoqF0LToadtMHc7q57FuVVZeJd8"></audio>
-  <a href="https://drive.google.com/uc?export=download&id=10CoIqJoqF0LToadtMHc7q57FuVVZeJd8" download="Lity Rate - Mhlephuli.mp3">⬇️ Download</a>
-</div>
-
-<div class="track">
-  <strong>Mini Me's</strong>
-  <audio controls src="https://drive.google.com/uc?export=download&id=10CYC7djPNMOYef4dvsBIFYJ8pnbdq5NB"></audio>
-  <a href="https://drive.google.com/uc?export=download&id=10CYC7djPNMOYef4dvsBIFYJ8pnbdq5NB" download="Lity Rate - Mini Me's.mp3">⬇️ Download</a>
-</div>
-
-<div class="track">
-  <strong>R350 Ungenile</strong>
-  <audio controls src="https://drive.google.com/uc?export=download&id=100hLIojrARIn0D0IvM_hDFK1vpIv6ljq"></audio>
-  <a href="https://drive.google.com/uc?export=download&id=100hLIojrARIn0D0IvM_hDFK1vpIv6ljq" download="Lity Rate - R350 Ungenile.mp3">⬇️ Download</a>
-</div>
-
-<div class="track">
-  <strong>Suicide</strong>
-  <audio controls src="https://drive.google.com/uc?export=download&id=100VYV-K6sQLABEkFUyzQchfadw1_n71B"></audio>
-  <a href="https://drive.google.com/uc?export=download&id=100VYV-K6sQLABEkFUyzQchfadw1_n71B" download="Lity Rate - Suicide.mp3">⬇️ Download</a>
-</div>
-
-<div class="track">
-  <strong>S'bhema Inkantini</strong>
-  <audio controls src="https://drive.google.com/uc?export=download&id=100I0xVjn_ccMKg9FgC3M_s2t2UYjkb5A"></audio>
-  <a href="https://drive.google.com/uc?export=download&id=100I0xVjn_ccMKg9FgC3M_s2t2UYjkb5A" download="Lity Rate - S'bhema Inkantini.mp3">⬇️ Download</a>
-</div>
-
+<header><h1>Lity Rate 🎶</h1></header>
+<main>
+<section class="category">
+  <h2>❤️ Love Songs</h2>
+  <img src="images/love.jpg" alt="Love Songs">
+  <div class="track">
+    <h3>I Want Love</h3>
+    <audio controls src="https://drive.google.com/uc?export=download&id=1-IKh3IJU6b54s_7XDyH3LOwlMn-Z4BIE"></audio>
+    <a href="https://drive.google.com/uc?export=download&id=1-IKh3IJU6b54s_7XDyH3LOwlMn-Z4BIE" download="Lity Rate - I Want Love.mp3">Download</a>
+  </div>
+</section>
+</main>
+<footer><p>&copy; 2025 Lity Rate Music</p></footer>
 </body>
 </html>
