--- a/index.html
+++ b/index.html
@@ -5,9 +5,24 @@
   <meta charset="UTF-8">
   <title>Lity Rate Music Hub</title>
   <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<header><h1>Lity Rate 🎶</h1></header>
+
+<header>
+  <h1>Lity Rate 🎤</h1>
+  <p>Official Music Hub | Trap, Love & Sad Songs</p>
+</header>
+
+<section class="bio">
+  <h2>About Lity Rate</h2>
+  <p>
+    Lity Rate is a versatile South African artist blending raw emotion with catchy melodies.
+    His music explores life, love, heartbreak, and hustle, connecting with audiences from KZN townships to global stages.
+    With a unique sound that fuses Trap, Love Songs, and Sad anthems, Lity Rate speaks for the underdogs, the dreamers, and the broken-hearted.
+  </p>
+</section>
+
 <main>
 <section class="category">
   <h2>❤️ Love Songs</h2>
@@ -18,7 +33,31 @@
     <a href="https://drive.google.com/uc?export=download&id=1-IKh3IJU6b54s_7XDyH3LOwlMn-Z4BIE" download="Lity Rate - I Want Love.mp3">Download</a>
   </div>
 </section>
+
+<section class="category">
+  <h2>🔥 Trap Songs</h2>
+  <img src="images/trap.jpg" alt="Trap Songs">
+  <div class="track">
+    <h3>Uhlalakuphi</h3>
+    <audio controls src="https://drive.google.com/uc?export=download&id=1-ryxqbY176b7zw_7XQ9K2pj4qjwFdc0Z"></audio>
+    <a href="https://drive.google.com/uc?export=download&id=1-ryxqbY176b7zw_7XQ9K2pj4qjwFdc0Z" download="Lity Rate - Uhlalakuphi.mp3">Download</a>
+  </div>
+</section>
+
+<section class="category">
+  <h2>💔 Sad Songs</h2>
+  <img src="images/sad.jpg" alt="Sad Songs">
+  <div class="track">
+    <h3>Gangster</h3>
+    <audio controls src="https://drive.google.com/uc?export=download&id=11-3IZhTJvqOaKrfs9i1TlI9-lQ_GdW5O"></audio>
+    <a href="https://drive.google.com/uc?export=download&id=11-3IZhTJvqOaKrfs9i1TlI9-lQ_GdW5O" download="Lity Rate - Gangster.mp3">Download</a>
+  </div>
+</section>
 </main>
-<footer><p>&copy; 2025 Lity Rate Music</p></footer>
+
+<footer>
+  <p>&copy; 2025 Lity Rate Music Hub. All rights reserved.</p>
+</footer>
+
 </body>
 </html>
